Add inspeciton of primitive types